hphp/hack/test/typecheck/reactive/mutable_as_hint4.php
<?hh // partial

class A {
}

<<__Rx>>
function f((function(Mutable<A>): void) $a): void {
}
